[kyo-kernel] mirror kyo-kernel2's KernelBench for cross-kernel boards
Same 19 row bodies as the kernel2 suite; the only divergences are the
handleLoop handler shapes (this kernel's handlers receive the
continuation explicitly, so answering in place is Loop.continue(cont(1)))
and the absence of partialSuspensionBaseline, which has no kernel-level
counterpart here. A separate kyo-kernel-bench project because Jmh
extends Test, and the old kernel's Test classpath reaches kyo-doctest
and the mid-migration stack above; the bench keeps Test/unmanagedJars
empty the same way kyo-kernel2 does. Jmh javaOptions mirror kernel2's
(UseCompactObjectHeaders dropped) so both boards run identical JVM
flags.