@@ -728,6 +728,24 @@ lazy val `kyo-kernel` =
         .jsSettings(`js-settings`)
         .wasmSettings(`wasm-settings`)
 
+// Mirror of kyo-kernel2's KernelBench compiled against the old kernel, for cross-kernel
+// comparison boards. A separate project because the old kernel's Test configuration (which
+// Jmh extends) depends on kyo-test and the stack above, mid-migration to the new kernel.
+lazy val `kyo-kernel-bench` =
+    project
+        .in(file("kyo-kernel/bench"))
+        .enablePlugins(JmhPlugin)
+        .dependsOn(`kyo-kernel`.jvm)
+        .disablePlugins(MimaPlugin)
+        .settings(
+            `kyo-settings`,
+            publish / skip := true,
+            // No tests or doctests here; keep the doctest driver jars (built from the stack
+            // above the kernel, mid-migration) off the Test classpath that Jmh extends.
+            Test / unmanagedJars := Seq.empty,
+            Jmh / javaOptions := (Test / javaOptions).value.filterNot(_ == "-XX:+UseCompactObjectHeaders")
+        )
+
 lazy val `kyo-kernel2` =
     crossProject(JSPlatform, JVMPlatform, NativePlatform, WasmPlatform)
         .crossType(CrossType.Full)
